# ROSrdt

./: README.md  costmap_common_params_waffle_pi.yaml  dwa_local_planner_params_waffle_pi.yaml
rdt/: CMakeLists.txt  package.xml  rdtgp_plugin.xml  setup.py
rdt/include/: global_planner.h
rdt/scripts/: server.py
rdt/src/: global_planner.cpp  goals.py  rdt2_guiless.py  service.py
rdt/srv/: init.srv  make_plan.srv
